# wagtail-external-richtext-link

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  test_requirements.txt  tox.ini
.github/workflows/: release.yaml  tests.yaml
docs/: README.md
external_link/: handlers.py  wagtail_hooks.py
external_link/static/css/: newtab_form.css
external_link/static/js/: newtab.js
sandbox/: Dockerfile  README.md  requirements.txt
sandbox/example_project/: urls.py  wsgi.py
sandbox/example_project/settings/: base.py  dev.py
sandbox/example_project/templates/: base.html
sandbox/home/: models.py
sandbox/home/migrations/: 0002_homepage_body.py
sandbox/home/templates/home/: home_page.html
test_project/: wsgi.py
test_project/settings/: base.py  dev.py
test_project/test_app/: models.py  tests.py
test_project/test_app/migrations/: 0001_initial.py
tests/: manage.py  requirements.txt
tests/test_app/: models.py  tests.py
tests/test_app/migrations/: 0001_initial.py
tests/test_project/settings/: base.py
tests/test_project/templates/: base.html
