[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["external_link*"]
exclude = ["sandbox*", "docs*"]

[project]
name = "wagtail-external-link-richtext"
version = "1.1.2"
description = "A feature for the richtext fields in Wagtail"
readme = "README.md"
authors = [{name = "Ruben Hesselink", email = "ruben@fourdigits.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Wagtail",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["richtext", "external", "link", "wagtail", "newtab", "django"]
dependencies = [
    "Django>=3.2,<3.3",
    "wagtail>=3.0,<3.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/fourdigits/wagtail-external-richtext-link"