[metadata]
name = wagtail-external-link-richtext
version = 1.1
author = Ruben Hesselink
author_email = ruben@fourdigits.nl
maintainer = Ruben Hesselink
maintainer_email = ruben@fourdigits.nl
description = Wagtail external richtext link feature
long_description = file:README.rst
keywords = richtext external link newtab
classifiers =
    Environment :: Web Environment
    Framework :: Wagtail
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find: